done: redone the database system (fully completed) generate all files necessary to submit the form. more files accordingly to the line number and trip indexes to add: maybe automize form submission? IDEAS: add 'grafik' - automatically generate schedule report from the driver schedule