@@ -2,18 +2,15 @@ package org.example;
 
 import java.io.IOException;
 import java.nio.file.*;
+import java.util.ArrayList;
 
-public class Writer{
-    Connect app = new Connect();
+public class Writer {
 
-    public void write(short linia, short kurs) throws IOException{
-        app.connect();
-        app.getStopAndTime((short) 813, kurs);
-
+    public static void write(short linia, short kurs, ArrayList<String> output) throws IOException {
 //        Files.copy(Path.of("src/main/java/org/example/beginning.txt"), Path.of("src/main/java/org/example/beginning1.txt"));
-//        byte[] a = Files.readAllBytes(Path.of("./Schedules/beginning.txt"));
-//        Files.write(Paths.get("./Schedules/" + Utils.nazwaRozkladu("06", "03", linia, kurs) + ".txt"), a);
-//        Files.write(Paths.get("./Schedules/" + Utils.nazwaRozkladu("06", "03", linia, kurs) + ".txt"), app.output, StandardOpenOption.APPEND);
+        byte[] a = Files.readAllBytes(Path.of("./Schedules/beginning.txt"));
+        Files.write(Paths.get("./Schedules/" + Utils.nazwaRozkladu("06", "03", linia, kurs) + ".txt"), a);
+        Files.write(Paths.get("./Schedules/" + Utils.nazwaRozkladu("06", "03", linia, kurs) + ".txt"), output, StandardOpenOption.APPEND);
     }
 }
 
